--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="menu_option2">estado de formularios</string>
     <string name="menu_option3">perfil</string>
     <string name="menu_option4">mensaje de texto</string>
+    <string name="formularios">Formulario</string>
+    <string name="perfiles">Perfil</string>
 </resources>
